<resources>
    <string name="app_name">PersonalAccountant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="receipt">Receipt</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="add_category">Add Category</string>
    <string name="category_icon">Category icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="see_history">See History</string>
    <string name="name">Name</string>
    <string name="budget">Budget</string>
    <string name="counting_period">Counting Period</string>
    <string name="total_cost">Total Cost</string>
    <string name="category_image">Category Image</string>
    <string name="ok">Ok</string>
    <string name="nomore_recent">No more recent receipts</string>
    <string name="noolder">No older receipts</string>
    <string name="nophoto">No associated photo</string>
    <string name="category_deletemsg">This will delete the associated photo\nAre you sure?</string>
    <string name="nothingfound_error">Nothing to display</string>
    <string name="sdcard_error">An error ocurred while saving the photo, please check the SD card</string>
</resources>
