<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin" tools:context=".Main">

    <Spinner
        android:text="@string/add_receipt"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="top"
        android:paddingBottom="10dp"
        android:id="@+id/category"/>

    <!-- Default image from: https://www.google.com/design/icons/index.html -->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/category"
        android:src="@drawable/camera"
        android:contentDescription="@string/add_receipt"
        android:id="@+id/receipt_photo"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        

        <EditText
            android:hint="@string/total_cost"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_toLeftOf="@+id/receipt_save"
            android:layout_toStartOf="@+id/receipt_save"
            android:id="@+id/cost"/>

        <Button
            android:id="@+id/receipt_save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>
</RelativeLayout>
